# rustaxion

./: .env.example  .gitignore  .prettierrc.toml  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  sqlite.db
crates/eagle_tcp_client/: Cargo.toml
crates/eagle_tcp_client/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/lib/: lib.rs  packet.rs
crates/rustaxion/: Cargo.toml  build.rs
crates/rustaxion/src/: main.rs
crates/rustaxion/src/database/: helpers.rs
crates/rustaxion/src/database/entities/: daily_login.rs  player_character.rs  score.rs  sea_orm_active_enums.rs  theme.rs
crates/rustaxion/src/database/json/: bpm_range.rs  mod.rs
crates/rustaxion/src/database/migrations/: m001_account.rs  m003_shop.rs  m005_character.rs  m006_theme.rs  m008_player_theme.rs  m009_beatmap.rs  m011_player_favourite_beatmap.rs  m012_score.rs  mod.rs
crates/rustaxion/src/enums/comet/: comet_login.rs  mod.rs
crates/rustaxion/src/proto/: cometGate.proto
crates/rustaxion/src/server/: mod.rs
crates/rustaxion/src/server/gate/: create_character.rs  enter_game.rs  login_gate_verify.rs  mod.rs  time.rs
crates/rustaxion/src/server/login/: game_version.rs  mod.rs  third_party_login.rs
crates/rustaxion/src/server/scene/: change_language.rs  mod.rs  rank_info.rs
crates/rustaxion/src/server/scene/event/: event_info.rs  mod.rs
crates/rustaxion/src/server/scene/shop/: shop_info.rs
crates/rustaxion/src/server/scene/social/: publish_dynamics.rs
crates/rustaxion/src/server/scene/song/: begin_song.rs  finish_song.rs  mod.rs  require_set_favourite.rs
crates/rustaxion/src/types/: mod.rs  packet.rs  response.rs  session.rs
env/: app.ini.example  database.ini.example
sql/entities/: Cargo.toml
sql/entities/src/: account.rs  lib.rs  player.rs
sql/migrations/: Cargo.toml
sql/migrations/src/: lib.rs  m001_account.rs  m002_player.rs
src/: client.rs  main.rs
src/database/: README.md  helpers.rs  mod.rs
src/database/entities/: account.rs  beatmap.rs  character.rs  daily_login.rs  mod.rs  player.rs  player_beatmap.rs  player_favourite_beatmap.rs  player_theme.rs  prelude.rs  sea_orm_active_enums.rs  shop_item.rs  theme.rs
src/database/json/: beatmap_difficulty.rs  bpm_range.rs
src/database/migrations/: README.md  m001_account.rs  m002_player.rs  m003_shop.rs  m004_daily_login.rs  m005_character.rs  m007_player_character.rs  m008_player_theme.rs  m009_beatmap.rs  m010_player_beatmap.rs  m011_player_favourite_beatmap.rs  mod.rs
src/enums/: e_country.rs  mod.rs
src/enums/comet/: comet_gate.rs  comet_login.rs  comet_scene.rs  mod.rs
src/proto/: README.md  cometGate.proto  cometLogin.proto  cometScene.proto  mod.rs
src/server/: mod.rs
src/server/gate/: create_character.rs  enter_game.rs  login_gate_verify.rs  mod.rs  time.rs
src/server/login/: game_version.rs  mod.rs  third_party_login.rs
src/server/scene/: change_language.rs  mod.rs  rank_info.rs
src/server/scene/event/: event_info.rs
src/server/scene/shop/: mod.rs  shop_info.rs
src/server/scene/social/: mod.rs
src/server/scene/song/: begin_song.rs  finish_song.rs  mod.rs
src/tests/: comet_login.rs  mod.rs
src/types/: mod.rs  packet.rs  response.rs  session.rs
src/types/comet/: comet_gate.rs  comet_login.rs  comet_scene.rs  mod.rs
