[package]
name = "rustaxion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
thiserror = "1.0"
color-backtrace = "0.6.1"
tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
enum-repr-derive = "0.2.0"
futures-util = { version = "0.3.30", features = ["sink"] }
byteorder = "1.5.0"
prost = "0.12.6"
md5 = "0.7.0"
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "382ee01dc1cf428c071cad1e3f2e6c6427e70f87" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "382ee01dc1cf428c071cad1e3f2e6c6427e70f87" }

[build-dependencies]
prost-build = "0.12.6"
protobuf-src = "2.0.1"
