[package]
name = "rustaxion"
version = "0.1.0"
authors = ["ArjixWasTaken <me@arjix.dev>"]
description = ""
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

sea-orm-migration = { version = "0.12.0", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }

tracing = { git = "https://github.com/tokio-rs/tracing", rev = "382ee01dc1cf428c071cad1e3f2e6c6427e70f87" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "382ee01dc1cf428c071cad1e3f2e6c6427e70f87" }

tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
tokio-util = { version = "0.7.11", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-test = "0.4.4"

anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
thiserror = "1.0"
color-backtrace = "0.6.1"

enum-repr-derive = "0.2.0"
byteorder = "1.5.0"
prost = "0.12.6"
md5 = "0.7.0"

indent = "0.1.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
chrono = "0.4.38"


[build-dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
prost-build = "0.12.6"
protobuf-src = "2.0.1"
indoc = "2.0.5"
