[package]
name = "eagle_tcp_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "EagleTcpClient"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.31"
libc = "0.2.167"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.24.0"
