[package]
name = "proto"
version = "0.1.0"
authors = ["ArjixWasTaken <me@arjix.dev>"]
description = ""
edition = "2021"

[lib]
name = "proto"
path = "lib/lib.rs"

[dependencies]
prost = "0.12.6"
enum-repr-derive = "0.2.0"
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
thiserror = "1.0"
tokio-util = { version = "0.7.11", features = ["full"] }
byteorder = "1.5.0"

[build-dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
indoc = "2.0.5"
prost-build = "0.12.6"
protobuf-src = "2.0.1"
